--- a/.gitignore
+++ b/.gitignore
@@ -1,52 +1,13 @@
-# Prerequisites
-*.d
+main.py
 
-# Object files
-*.o
-*.ko
-*.obj
-*.elf
+tmp.html
 
-# Linker output
-*.ilk
-*.map
-*.exp
+.idea/
 
-# Precompiled Headers
-*.gch
-*.pch
+uvil_test.ipynb
 
-# Libraries
-*.lib
-*.a
-*.la
-*.lo
-
-# Shared objects (inc. Windows DLLs)
-*.dll
-*.so
-*.so.*
-*.dylib
-
-# Executables
-*.exe
-*.out
-*.app
-*.i*86
-*.x86_64
-*.hex
-
-# Debug files
-*.dSYM/
-*.su
-*.idb
-*.pdb
-
-# Kernel Module Compile Results
-*.mod*
-*.cmd
-.tmp_versions/
-modules.order
-Module.symvers
-Mkfile.old
-dkms.conf
+__pycache__/
+*.pyc
+.env
+venv/
+.env/
